--- a/utils/format-path/package.json
+++ b/utils/format-path/package.json
@@ -25,5 +25,6 @@
   },
   "bugs": {
     "url": "https://github.com/myAotuBest/code-robot-cli/issues"
-  }
+  },
+  "gitHead": "1e439afa10c213c9fbabe2a0dd3c383dafffb271"
 }
