--- a/core/exec/package.json
+++ b/core/exec/package.json
@@ -27,8 +27,9 @@
     "url": "https://github.com/myAotuBest/code-robot-cli/issues"
   },
   "dependencies": {
-    "@code-robot-cli/log": "file:../../utils/log",
-    "@code-robot-cli/package": "file:../../models/package",
-    "@code-robot-cli/utils": "file:../../utils/utils"
-  }
+    "@code-robot-cli/log": "^1.0.1",
+    "@code-robot-cli/package": "^1.0.1",
+    "@code-robot-cli/utils": "^1.0.1"
+  },
+  "gitHead": "1e439afa10c213c9fbabe2a0dd3c383dafffb271"
 }
