--- a/models/cloudbuild/package.json
+++ b/models/cloudbuild/package.json
@@ -27,10 +27,11 @@
     "url": "https://github.com/myAotuBest/code-robot-cli/issues"
   },
   "dependencies": {
-    "@code-robot-cli/log": "file:../../utils/log",
-    "@code-robot-cli/request": "file:../../utils/request",
+    "@code-robot-cli/log": "^1.0.1",
+    "@code-robot-cli/request": "^1.0.1",
     "inquirer": "^8.1.1",
     "lodash": "^4.17.21",
     "socket.io-client": "^2.0.0"
-  }
+  },
+  "gitHead": "1e439afa10c213c9fbabe2a0dd3c383dafffb271"
 }
