--- a/models/git/package.json
+++ b/models/git/package.json
@@ -27,10 +27,10 @@
     "url": "https://github.com/myAotuBest/code-robot-cli/issues"
   },
   "dependencies": {
-    "@code-robot-cli/cloudbuild": "file:../../models/cloudbuild",
-    "@code-robot-cli/log": "file:../../utils/log",
-    "@code-robot-cli/request": "file:../../utils/request",
-    "@code-robot-cli/utils": "file:../../utils/utils",
+    "@code-robot-cli/cloudbuild": "^1.0.1",
+    "@code-robot-cli/log": "^1.0.1",
+    "@code-robot-cli/request": "^1.0.1",
+    "@code-robot-cli/utils": "^1.0.1",
     "axios": "^0.21.1",
     "fs-extra": "^10.0.0",
     "inquirer": "^8.1.1",
@@ -44,5 +44,6 @@
   "devDependencies": {
     "mocha": "^9.1.1",
     "should": "^13.2.3"
-  }
+  },
+  "gitHead": "1e439afa10c213c9fbabe2a0dd3c383dafffb271"
 }
