--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -23,10 +23,10 @@
     "test": "echo \"Run testing from core\""
   },
   "dependencies": {
-    "@code-robot-cli/exec": "^1.0.1",
-    "@code-robot-cli/get-npm-info": "file:../../utils/get-npm-info",
-    "@code-robot-cli/init": "^1.0.1",
-    "@code-robot-cli/log": "^1.0.1",
+    "@code-robot-cli/exec": "file:../exec",
+    "@code-robot-cli/get-cli-info": "file:../../utils/get-cli-info",
+    "@code-robot-cli/init": "file:../../commands/init",
+    "@code-robot-cli/log": "file:../../utils/log",
     "colors": "^1.4.0",
     "commander": "^6.2.1",
     "dotenv": "^8.2.0",
@@ -38,7 +38,7 @@
     "semver": "^7.3.4",
     "user-home": "^2.0.0"
   },
-  "gitHead": "1e439afa10c213c9fbabe2a0dd3c383dafffb271",
+  "gitHead": "1aee0325d093a8979c53fc7897ea23c38e189b82",
   "devDependencies": {
     "npmlog": "^4.1.2"
   }
