--- a/commands/publish/package.json
+++ b/commands/publish/package.json
@@ -14,7 +14,8 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "http://registry.npm.taobao.org"
+    "registry": "http://registry.npm.taobao.org",
+    "access": "public"
   },
   "dependencies": {
     "@code-robot-cli/command": "^1.0.1",
@@ -32,5 +33,5 @@
   "bugs": {
     "url": "https://github.com/myAotuBest/code-robot-cli/issues"
   },
-  "gitHead": "8e94f2f342e0d7c18a4152a2d07210ca83bfb997"
+  "gitHead": "986412305d8dfede52d48b86760050340208c4e9"
 }
