--- a/models/cloudbuild/package.json
+++ b/models/cloudbuild/package.json
@@ -14,7 +14,8 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "http://registry.npm.taobao.org"
+    "registry": "http://registry.npm.taobao.org",
+    "access": "public"
   },
   "repository": {
     "type": "git",
@@ -33,5 +34,5 @@
     "lodash": "^4.17.21",
     "socket.io-client": "^2.0.0"
   },
-  "gitHead": "8e94f2f342e0d7c18a4152a2d07210ca83bfb997"
+  "gitHead": "986412305d8dfede52d48b86760050340208c4e9"
 }
