--- a/models/git/package.json
+++ b/models/git/package.json
@@ -14,7 +14,8 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "http://registry.npm.taobao.org"
+    "registry": "http://registry.npm.taobao.org",
+    "access": "public"
   },
   "repository": {
     "type": "git",
@@ -45,5 +46,5 @@
     "mocha": "^9.1.1",
     "should": "^13.2.3"
   },
-  "gitHead": "8e94f2f342e0d7c18a4152a2d07210ca83bfb997"
+  "gitHead": "986412305d8dfede52d48b86760050340208c4e9"
 }
