--- a/models/package/package.json
+++ b/models/package/package.json
@@ -14,7 +14,8 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "http://registry.npmjs.org/"
+    "registry": "http://registry.npmjs.org/",
+    "access": "public"
   },
   "repository": {
     "type": "git",
@@ -35,5 +36,5 @@
     "path-exists": "^4.0.0",
     "pkg-dir": "^5.0.0"
   },
-  "gitHead": "8e94f2f342e0d7c18a4152a2d07210ca83bfb997"
+  "gitHead": "986412305d8dfede52d48b86760050340208c4e9"
 }
