--- a/models/cloudbuild/package.json
+++ b/models/cloudbuild/package.json
@@ -14,7 +14,7 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "http://registry.npm.taobao.org",
+    "registry": "http://registry.npmjs.org/",
     "access": "public"
   },
   "repository": {
@@ -34,5 +34,5 @@
     "lodash": "^4.17.21",
     "socket.io-client": "^2.0.0"
   },
-  "gitHead": "0b0abce1f1fa6dd8a4042cea3a787c49540c173c"
+  "gitHead": "f0f07a9775c1aa7d510f6abc8ad2a3ef511f5866"
 }
