--- a/models/git/package.json
+++ b/models/git/package.json
@@ -14,7 +14,7 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "http://registry.npm.taobao.org",
+    "registry": "http://registry.npmjs.org/",
     "access": "public"
   },
   "repository": {
@@ -46,5 +46,5 @@
     "mocha": "^9.1.1",
     "should": "^13.2.3"
   },
-  "gitHead": "0b0abce1f1fa6dd8a4042cea3a787c49540c173c"
+  "gitHead": "f0f07a9775c1aa7d510f6abc8ad2a3ef511f5866"
 }
