--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -17,6 +17,7 @@
     "lib"
   ],
   "publishConfig": {
+    "registry": "http://registry.npmjs.org/",
     "access": "public"
   },
   "scripts": {
@@ -38,7 +39,7 @@
     "semver": "^7.3.4",
     "user-home": "^2.0.0"
   },
-  "gitHead": "0b0abce1f1fa6dd8a4042cea3a787c49540c173c",
+  "gitHead": "f0f07a9775c1aa7d510f6abc8ad2a3ef511f5866",
   "devDependencies": {
     "npmlog": "^4.1.2"
   }
