--- a/commands/add/package.json
+++ b/commands/add/package.json
@@ -27,10 +27,10 @@
     "url": "https://github.com/myAotuBest/code-robot-cli/issues"
   },
   "dependencies": {
-    "@code-robot-cli/command": "file:../../models/command",
-    "@code-robot-cli/log": "file:../../utils/log",
-    "@code-robot-cli/package": "file:../../models/package",
-    "@code-robot-cli/utils": "file:../../utils/utils",
+    "@code-robot-cli/command": "^1.0.2",
+    "@code-robot-cli/log": "^1.0.2",
+    "@code-robot-cli/package": "^1.0.2",
+    "@code-robot-cli/utils": "^1.0.2",
     "ejs": "^3.1.6",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
@@ -39,5 +39,6 @@
     "pkg-up": "^3.1.0",
     "semver": "^7.3.5",
     "user-home": "^3.0.0"
-  }
+  },
+  "gitHead": "32bbbd66b24df964ef8c1ef7dd46dab803a88777"
 }
