--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "main": "",
   "bin": {
-    "code-robot-cli": "bin/index.js"
+    "code-robot": "bin/index.js"
   },
   "directories": {
     "lib": "lib",
