--- a/commands/add/package.json
+++ b/commands/add/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@code-robot-cli/add",
-  "version": "1.0.3",
+  "version": "1.0.1",
   "description": "code-robot-cli add",
   "author": "徐聪 <753428092@qq.com>",
   "homepage": "https://github.com/myAotuBest/code-robot-cli#readme",
@@ -27,10 +27,11 @@
     "url": "https://github.com/myAotuBest/code-robot-cli/issues"
   },
   "dependencies": {
-    "@code-robot-cli/command": "^1.0.3",
-    "@code-robot-cli/log": "^1.0.3",
+    "@code-robot-cli/command": "file:../../models/command",
+    "@code-robot-cli/log": "^1.0.1",
     "@code-robot-cli/package": "file:../../models/package",
-    "@code-robot-cli/utils": "^1.0.3",
+    "@code-robot-cli/request": "file:../../utils/request",
+    "@code-robot-cli/utils": "^1.0.2",
     "ejs": "^3.1.6",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
